--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "phaser-webpack",
+  "name": "interactive-storybook",
   "version": "0.0.1",
-  "description": "Basic Phaser CE and Webpack boilerplate",
+  "description": "Interactive storybook demo",
   "author": "Simon Martin",
   "main": "index.js",
   "scripts": {
     "dev": "webpack",
-    "prod": "webpack --config webpack.production.config.js",
-    "test": "eslint ./src/**/**.js"
+    "prod": "webpack --config webpack.production.config.js"
+
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/simonma10/phaser-webpack"
+    "url": ""
   },
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.12",
     "browser-sync-webpack-plugin": "^1.1.4",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
     "expose-loader": "^0.7.3",
-    "webpack": "^2.5.1"
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
-    "phaser-ce": "^2.7.9",
-    "webfontloader": "^1.6.27"
+    "phaser-ce": "^2.9.1",
+    "webfontloader": "^1.6.27",
+    "lodash": "^4.17.4",
+    "react": "^15.6.1",
+    "react-bootstrap": "^0.31.3",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
 
