--- a/static/data/manifest.json
+++ b/static/data/manifest.json
@@ -1,26 +1,31 @@
 {
   "images":[
-    {"reference": "page0", "path": "/static/wipe.jpg"},
-    {"reference": "page1", "path": "/static/Pitch frieze page 1.jpg"},
-    {"reference": "page2", "path": "/static/FRIEZE STORYBOARD_Group 2.jpg"},
-    {"reference": "page3", "path": "/static/Pitch frieze - spider page 3b.jpg"},
-    {"reference": "page4", "path": "/static/Pitch frieze - spider page 4.jpg"},
-    {"reference": "page5", "path": "/static/Pitch frieze - spider page 5b.jpg"},
-    {"reference": "page6", "path": "/static/Screen Shot 2017-08-09 at 3.33.11 pm.png"},
-    {"reference": "page7", "path": "/static/Pitch frieze - page 8.jpg"},
-    {"reference": "page8", "path": "/static/wipe.jpg"},
-    {"reference": "page9", "path": "/static/Pitch frieze - page 6.jpg"},
-    {"reference": "page10", "path": "/static/Pitch frieze page 10.jpg"},
-    {"reference": "page11", "path": "/static/Screen Shot 2017-08-09 at 3.34.53 pm.png"},
-    {"reference": "page12", "path": "/static/Pitch frieze - page 12.jpg"},
-    {"reference": "page13", "path": "/static/Pitch frieze page 13.jpg"},
-    {"reference": "page14", "path": "/static/Pitch frieze page 14.jpg"},
-    {"reference": "page15", "path": "/static/wipe.jpg"},
-    {"reference": "page16", "path": "/static/Pitch frieze page 15.jpg"},
-    {"reference": "page17", "path": "/static/Screen Shot 2017-08-09 at 3.35.48 pm.png"},
-    {"reference": "page18", "path": "/static/Pitch frieze page 17.jpg"}
+    {"key": "page0", "path": "/static/wipe.jpg"},
+    {"key": "page1", "path": "/static/Pitch frieze page 1.jpg"},
+    {"key": "page2", "path": "/static/FRIEZE STORYBOARD_Group 2.jpg"},
+    {"key": "page3", "path": "/static/Pitch frieze - spider page 3b.jpg"},
+    {"key": "page4", "path": "/static/Pitch frieze - spider page 4.jpg"},
+    {"key": "page5", "path": "/static/Pitch frieze - spider page 5b.jpg"},
+    {"key": "page6", "path": "/static/Screen Shot 2017-08-09 at 3.33.11 pm.png"},
+    {"key": "page7", "path": "/static/Pitch frieze - page 8.jpg"},
+    {"key": "page8", "path": "/static/wipe.jpg"},
+    {"key": "page9", "path": "/static/Pitch frieze - page 6.jpg"},
+    {"key": "page10", "path": "/static/Pitch frieze page 10.jpg"},
+    {"key": "page11", "path": "/static/Screen Shot 2017-08-09 at 3.34.53 pm.png"},
+    {"key": "page12", "path": "/static/Pitch frieze - page 12.jpg"},
+    {"key": "page13", "path": "/static/Pitch frieze page 13.jpg"},
+    {"key": "page14", "path": "/static/Pitch frieze page 14.jpg"},
+    {"key": "page15", "path": "/static/wipe.jpg"},
+    {"key": "page16", "path": "/static/Pitch frieze page 15.jpg"},
+    {"key": "page17", "path": "/static/Screen Shot 2017-08-09 at 3.35.48 pm.png"},
+    {"key": "page18", "path": "/static/Pitch frieze page 17.jpg"},
+    {"key": "star", "path": "/static/star.png"},
+    {"key": "star2", "path": "/static/star2.png"},
+    {"key": "star3", "path": "/static/star3.png"}
 
-
+  ],
+  "spritesheets":[
+    {"key": "flareBlue", "path": "/static/flareblue16.png", "frameWidth": 256, "frameHeight": 256, "frameMax":16 }
   ]
 
 }
